--- a/css/style.css
+++ b/css/style.css
@@ -7,25 +7,6 @@ body {
 *, *::before, *::after {
     box-sizing: inherit;
 }
-li {
-    background-color: #fff;
-    color: #595959;
-    font-size: 14px;
-    line-height: 24px;
-}
-h1 {
-    font-size: 47px;
-    font-weight: 700;
-    color: #000;
-}
-h2 {
-    font-size: 25px;
-    font-weight: 700;
-    color: #000;
-}
-img {
-    width: 100%;
-}
 
 
 .main_wrapper {
@@ -35,27 +16,171 @@ img {
     margin: 50px auto;
     flex-wrap: wrap;
     background-color: #fff;
+    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
+}
+.main_wrapper li {
+    background-color: inherit;
 }
 
 /* main-section start */
 .main_content {
-    width: 830px; 
+    width: 830px;
+    padding: 100px 90px;
 }
-.main_content h3 {
-    font-size: 30px;
-    font-weight: 700;
+
+.main_section_title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 27px;
+    color: #000;
+    margin: 0 0 10px 0;
+}
+
+/*about me section*/
+.about_me {
+    margin-bottom: 40px;
+}
+.about_me_profession {
+    margin: 0 0 20px 0;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    color:#000
+}
+.about_me_name {
+    margin: 0 0 25px 0;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 45px;
+    line-height: 55px;
+    color:#000
+}
+.about_me_description {
+    margin: 0 0 40px 0;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: #595959;
+    width: 400px;
+}
+
+/* my projects section */
+.my_projects {
+    margin: 0 0 50px 0;
+}
+.my_projects_list {
+    padding: 0 0 0 20px;
+}
+.my_projects_item {
+    color: #000;
+    font-weight: bold;
+}
+.my_projects_link {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: #595959;
+    text-decoration: none;
+}
+.my_projects_text {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: #595959;
+    margin-left: 7px;
+}
+.my_projects_bracket {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 24px;
     color: #000;
 }
-.main_content h4 {
-    font-size: 25px;
-    font-weight: 700;
-    color: #000;
+
+/* work experience section */
+.work_experience {
+    margin: 0 0 45px 0;
 }
-.main_content h5 {
-    font-size: 20px;
-    font-weight: 700;
-    color: #000;
+.work_experience_block {
+    margin: 0 0 20px 0;
 }
+.work_experience_block:last-child {
+    margin-bottom: 0;
+}
+.work_experience_position {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000;
+    margin: 0 0 10px 0;
+}
+.work_experience_position span {
+    color: #FB6D3A;
+}
+.work_experience_period {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    color: #A8A8A8;
+    margin: 0 0 10px 0;
+}
+.work_experience_period span {
+    color: #000;
+    margin: 0 5px;
+}
+.work_experience_duties {
+    padding: 0 0 0 18px;
+}
+.work_experience_duty {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: #595959;
+}
+
+/* education section */
+.educational_institution {
+    margin: 0 0 20px 0;
+}
+.educational_institution:last-child {
+    margin-bottom: 0;
+}
+.educational_institution_name {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    color: #FB6D3A;
+    margin: 0 0 10px 0;
+}
+.acquired_knowledge {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000;
+    margin: 0 0 10px 0;
+}
+.my_education_period {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    color: #A8A8A8;
+}
+.my_education_period span {
+    color: #000;
+    margin: 0 5px;
+}
+
 /* main-section end */
 
 /* sidebar-section start */
@@ -68,6 +193,10 @@ img {
     background-color: inherit;
 }
 
+/* avatar */
+.sidebar_avatar img {
+    width: 100%;
+}
 
 /* contacts */
 .contacts_section_type {
@@ -91,7 +220,7 @@ img {
 
 /*tech skills*/
 .tech_skills_list {
-    padding: 0 0 0 15px;
+    padding: 0 0 0 18px;
 }
 .tech_skills_item {
     color: #FB6D3A;
@@ -131,3 +260,4 @@ img {
 }
 
 /* sidebar-section end */
+
